<resources>
    <string name="app_name">Weather</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="favorites">Favorites</string>
    <string name="visibility">Visibility</string>
    <string name="save">Save</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="notifications">Notifications</string>
    <string name="we_can_t_fetch_your_location">We can\'t fetch your location</string>
    <string name="allow_weather_to_access_location">Please allow Weather to access your location or choose a location from Map</string>
    <string name="allow">Allow</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="delete">Delete</string>
    <string name="m_s">m/s</string>
    <string name="mph">mph</string>
    <string name="hpa">hpa</string>
    <string name="meter">m</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">Unknown</string>
    <string name="invalid_time">Invalid Time</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="weather_is_fine">Weather is fine, no alerts for the scheduled time period</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="no_alerts">No Alerts</string>
    <string name="no_favorites">No Favorites</string>
    <string name="general">General</string>
    <string name="units">Units</string>
    <string name="from_date">From Date</string>
    <string name="from_time">From Time</string>
    <string name="to_date">To Date</string>
    <string name="to_time">To Time</string>
    <string name="new_alert">New alert</string>
    <string name="theme">Theme</string>
    <string name="accent">Color</string>
    <string name="default_">Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="celsius_unit">°C</string>
    <string name="fahrenheit_unit">°F</string>
    <string name="kelvin_unit">°K</string>
    <string name="check_your_connection">Check your connection, then refresh the page</string>
    <string name="check_your_connection_and_try_again">Check your connection, and try again</string>
    <string name="you_have_exceeded_limit">You have exceeded requests daily limit</string>
    <string name="empty"></string>
    <string name="refresh">Refresh</string>
    <string name="denied_permission_many_times">You have denied permission many times, select \"GPS\" to allow permission from application details settings or choose your location from map</string>
</resources>
