<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/gradient_square"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/notifications"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/rgNotifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_small_rounded_corners"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <RadioButton
                            android:id="@+id/rbEnableNotification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="true"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/enable"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/rbDisableNotification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="false"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/disable"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/gradient_square"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/location"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/rgLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_small_rounded_corners"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <RadioButton
                            android:id="@+id/rbGps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="true"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/gps"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/rbMap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="false"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/map"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/gradient_square"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/language"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/rgLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_small_rounded_corners"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <RadioButton
                            android:id="@+id/rbEnglish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="true"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/english"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/rbArabic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="false"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/arabic"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/gradient_square"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/temperature"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/rgTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_small_rounded_corners"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <RadioButton
                            android:id="@+id/rbCelsius"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="true"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/celsius"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/rbKelvin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="false"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/kelvin"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/rbFahrenheit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/fahrenheit"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/gradient_square"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/wind_speed"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/rgWindSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_small_rounded_corners"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <RadioButton
                            android:id="@+id/rbMeter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="true"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/meter_sec"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/rbMile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/pink"
                            android:checked="false"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/mile_hour"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
